--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,6 @@ jobs:
         run: |  
           python pop3main.py
       - name: Update doc
-        run: date +%s > doc.txt
+        run: chmod 777 doc.txt
+             date +%s > doc.txt
+             echo " lab2 ~ update \n" | tee doc.txt
