--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,3 +27,5 @@ jobs:
         git add DOC.md
         git commit -m "Обновление DOC.md"
         git push https://github.com/${{ github.repository }}.git HEAD:main
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
