--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -5,7 +5,7 @@ permissions:
   contents: write
   pull-requests: write
 jobs:
-  dependabot:
+  merge:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'mariiamorina17' }}
     steps:
